Pass args specified to the starter jar to MC
And fix compatibility with Forge 1.17