@@ -1,5 +1,4 @@
 import java.nio.file.Files
-import java.nio.file.Paths
 
 plugins {
     id 'java'
@@ -36,7 +35,7 @@ dependencies {
 
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(21)
+        languageVersion = JavaLanguageVersion.of(16)
     }
 }
 
@@ -45,9 +44,7 @@ jar {
     manifest.attributes([
             'Main-Class'          : 'net.neoforged.serverstarterjar.Main',
             'Premain-Class'       : 'net.neoforged.serverstarterjar.Agent',
-            'Launcher-Agent-Class': 'net.neoforged.serverstarterjar.Agent',
-            'Add-Exports'         : 'java.base/jdk.internal.loader',
-            'Add-Opens'           : 'java.base/java.lang',
+            'Launcher-Agent-Class': 'net.neoforged.serverstarterjar.Agent'
     ])
 }
 
